Extracted step count into own class. Integrated with RESpeckPacketHandler. Uploading minute step count. Force reloading of properties (config) file when Activity is created.

--- a/config_files/Daphne - RESpeck.config
+++ b/config_files/Daphne - RESpeck.config
@@ -40,6 +40,7 @@ EnableSupervisedAQMap=true
 EnableSubjectHome=true
 EnableSubjectValues=true
 EnableSubjectWindmill=false
+EnableSupervisedStepCount=true
 
 # Do we want to store the location of the phone?
 EnablePhoneLocationStorage=true
