--- a/config_files/Dublin - RESpeck.config
+++ b/config_files/Dublin - RESpeck.config
@@ -40,6 +40,7 @@ EnableSupervisedAQMap=false
 EnableSubjectHome=true
 EnableSubjectValues=true
 EnableSubjectWindmill=true
+EnableSupervisedStepCount=false
 
 # Do we want to store the location of the phone?
 EnablePhoneLocationStorage=false
