--- a/config_files/Daphne - RESpeck.config
+++ b/config_files/Daphne - RESpeck.config
@@ -2,17 +2,18 @@
 # Different for each subject
 #######################################
 
-PatientID=1
+PatientID=1000
 RESpeckKey=hbNNpYX6e4WZ5PWgfXrpd8Tz8D6VmFDjCc2wYcy2
-RESpeckUUID=D3:53:09:12:80:A0
-QoEUUID=C1:0B:35:11:3F:16
+RESpeckUUID=FA:84:2A:12:C3:3E
+QoEUUID=F5:24:87:15:A6:F5
+SpirometerUUID=00:26:33:CD:21:F6
 
 #######################################
 # Same for all subjects in one project
 #######################################
 
 # Upload data to server?
-UploadToServer=false
+UploadToServer=true
 
 # Store data locally?
 StoreDataLocally=true
@@ -24,8 +25,8 @@ IsSupervisedStartingMode=false
 EnableSupervisedMode=true
 EnableSubjectMode=true
 
-# If Airspeck is disabled, this disables the bluetooth search for the Airspeck and all Airspeck 
-# related Fragments, independent of the values set below. 
+# If Airspeck is disabled, this disables the bluetooth search for the Airspeck and all Airspeck
+# related Fragments, independent of the values set below.
 EnableAirspeck=true
 
 # Same with RESpeck. Enabled by default for compatibility reasons.
