--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,7 @@ dependencies {
     compile 'com.polidea.rxandroidble:rxandroidble:1.2.2'
     //compile 'com.trello.rxlifecycle2:rxlifecycle:2.1.0'
     //compile 'com.trello.rxlifecycle2:rxlifecycle-android:2.1.0'
+    compile 'org.greenrobot:eventbus:3.1.1'
 }
 
 crashlytics {
