Diary upload and storage

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
-    <uses-permission android:name="com.specknet.pairingdaphne.provider.READ_PERMISSION"/>
+    <uses-permission android:name="com.specknet.pairing.provider.READ_PERMISSION"/>
 
     <uses-feature android:name="android.hardware.location.gps"/>
     <uses-feature
