--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,6 +92,16 @@
         </activity>
 
         <activity
+            android:name=".activities.SecurityKeySetupActivity"
+            android:label="@string/title_activity_security_key"
+            android:parentActivityName=".activities.MainActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.MainActivity"/>
+        </activity>
+
+        <activity
             android:name=".activities.ConfigViewActivity"
             android:label="@string/config_view_title"
             android:parentActivityName=".activities.MainActivity"
