--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.22.1'
+        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
@@ -23,8 +23,8 @@ android {
         applicationId "com.specknet.airrespeck"
         minSdkVersion 22
         targetSdkVersion 25
-        versionCode 35
-        versionName "1.8.1"
+        versionCode 36
+        versionName "1.8.2"
 
         // Enabling multidex support.
         // multiDexEnabled true
@@ -56,10 +56,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     // Crashlytics for getting crash reports remotely
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.1@aar') {
-        transitive = true;
-    }
-    compile('com.crashlytics.sdk.android:crashlytics-ndk:1.1.3@aar') {
+    compile('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
         transitive = true;
     }
     compile 'com.android.support:appcompat-v7:25.4.0'
@@ -86,6 +83,9 @@ dependencies {
     compile 'com.polidea.rxandroidble:rxandroidble:1.2.2'
     //compile 'com.trello.rxlifecycle2:rxlifecycle:2.1.0'
     //compile 'com.trello.rxlifecycle2:rxlifecycle-android:2.1.0'
+    compile('com.crashlytics.sdk.android:answers:1.4.1@aar') {
+        transitive = true;
+    }
 }
 
 crashlytics {
