--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,7 @@
-buildscript {
-    repositories {
-        maven { url 'https://maven.fabric.io/public' }
-    }
-    dependencies {
-        classpath 'io.fabric.tools:gradle:1.+'
-    }
-}
-
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'io.fabric'
 
 repositories {
-    maven { url 'https://maven.fabric.io/public' }
     jcenter()
 }
 
@@ -55,10 +44,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    // Crashlytics for getting crash reports remotely
-    compile('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
-        transitive = true;
-    }
     compile 'com.android.support:appcompat-v7:25.4.0'
     compile 'com.android.support:support-v4:25.4.0'
     compile 'com.android.support:design:25.4.0'
@@ -83,13 +68,9 @@ dependencies {
     compile 'com.polidea.rxandroidble:rxandroidble:1.2.2'
     //compile 'com.trello.rxlifecycle2:rxlifecycle:2.1.0'
     //compile 'com.trello.rxlifecycle2:rxlifecycle-android:2.1.0'
-    compile('com.crashlytics.sdk.android:answers:1.4.1@aar') {
-        transitive = true;
-    }
+
+    compile 'com.google.firebase:firebase-core:11.8.0'
+    compile 'com.google.firebase:firebase-crash:11.8.0'
 }
 
-crashlytics {
-    enableNdk true
-    androidNdkOut 'src/main/obj'
-    androidNdkLibsOut 'src/main/libs'
-}
+apply plugin: 'com.google.gms.google-services'
