--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -119,7 +119,7 @@
         </activity>
 
         <activity
-            android:name=".activities.VolumeCalibrationRecordingActivity"
+            android:name=".fragments.VolumeCalibrationRecordingFragment"
             android:label="@string/title_activity_volume_recording"
             android:parentActivityName=".activities.MainActivity"
             android:screenOrientation="portrait">
