--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.specknet.airrespeck"
         minSdkVersion 22
         targetSdkVersion 25
-        versionCode 74
-        versionName "2.3.9-inhaler"
+        versionCode 76
+        versionName "2.5.0"
 
         // Enabling multidex support.
         // multiDexEnabled true
