--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 repositories {
+    google()
     jcenter()
 }
 
@@ -11,8 +12,8 @@ android {
         applicationId "com.specknet.airrespeck"
         minSdkVersion 22
         targetSdkVersion 25
-        versionCode 82
-        versionName "2.5.5"
+        versionCode 83
+        versionName "2.5.6"
 
         // Enabling multidex support.
         // multiDexEnabled true
