--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.specknet.airrespeck"
         minSdkVersion 22
         targetSdkVersion 25
-        versionCode 84
-        versionName "2.5.7"
+        versionCode 85
+        versionName "2.5.8-subpacket_ids"
 
         // Enabling multidex support.
         // multiDexEnabled true
