Broadcasts for rehab app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -138,6 +138,9 @@
                 <action android:name="com.specknet.diarydaphne.DIARY_BROADCAST"/>
             </intent-filter>
             <intent-filter>
+                <action android:name="com.specknet.rehabdiary.DIARY_BROADCAST"/>
+            </intent-filter>
+            <intent-filter>
                 <action android:name="com.specknet.airspeck.AIRSPECK_LIVE_BROADCAST"/>
             </intent-filter>
             <intent-filter>
@@ -145,6 +148,9 @@
             </intent-filter>
             <intent-filter>
                 <action android:name="com.specknet.respeck.ACTION_RESPECK_RECORDING_CONTINUE"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.specknet.uploadservice.REHAB_STATS_UPLOAD"/>
             </intent-filter>
         </service>
 
