--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
         minSdkVersion 22
         targetSdkVersion 25
         versionCode 107
-        versionName "2.5.11-covid"
+        versionName "2.5.11"
 
         // Enabling multidex support.
         // multiDexEnabled true
