--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    //ndkVersion '21.2.6472646'
+    ndkVersion '21.2.6472646'
 }
 
 dependencies {
