--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,11 +40,14 @@ android {
     lintOptions {
         abortOnError false
     }
+    aaptOptions {
+        noCompress "tflite"
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    //ndkVersion '21.2.6472646'
+    ndkVersion '21.2.6472646'
 }
 
 dependencies {
@@ -75,6 +78,7 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest-core:1.3'
     testImplementation 'org.hamcrest:hamcrest-integration:1.3'
     testImplementation 'org.hamcrest:hamcrest-library:1.3'
+    implementation "org.tensorflow:tensorflow-lite:0.0.0-nightly"
 
 }
 
