--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@
 systemProp.http.proxyHost=localhost
 org.gradle.jvmargs=-Xmx4096m -XX\:MaxPermSize\=1024m -XX\:+HeapDumpOnOutOfMemoryError -Dfile.encoding\=UTF-8
 systemProp.http.proxyPort=1087
+android.useAndroidX=true
+android.enableJetifier=true
