--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,26 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.specknet.airrespeck"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.specknet.airrespeck">
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="com.specknet.pairing.provider.READ_PERMISSION" />
 
-
-    <uses-permission android:name="com.specknet.pairing.provider.READ_PERMISSION"/>
-
-    <uses-feature android:name="android.hardware.location.gps"/>
+    <uses-feature android:name="android.hardware.location.gps" />
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -29,15 +27,17 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.BatteryViewActivity"></activity>
+
         <meta-data
             android:name="AA_DB_NAME"
-            android:value="AirRespeck.db"/>
+            android:value="AirRespeck.db" />
         <meta-data
             android:name="AA_DB_VERSION"
-            android:value="5"/>
+            android:value="5" />
         <meta-data
             android:name="AA_MODELS"
-            android:value="com.specknet.airrespeck.datamodels.User"/>
+            android:value="com.specknet.airrespeck.datamodels.User" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -48,7 +48,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key"/>
+            android:value="@string/google_maps_key" />
 
         <activity
             android:name=".activities.MainActivity"
@@ -57,37 +57,37 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="com.specknet.respeck.RESPECK_LIVE_BROADCAST"/>
+                <action android:name="com.specknet.respeck.RESPECK_LIVE_BROADCAST" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.specknet.respeck.RESPECK_CONNECTED"/>
+                <action android:name="com.specknet.respeck.RESPECK_CONNECTED" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.specknet.respeck.RESPECK_DISCONNECTED"/>
+                <action android:name="com.specknet.respeck.RESPECK_DISCONNECTED" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.specknet.airspeck.AIRSPECK_LIVE_BROADCAST"/>
+                <action android:name="com.specknet.airspeck.AIRSPECK_LIVE_BROADCAST" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.specknet.airspeck.AIRSPECK_CONNECTED"/>
+                <action android:name="com.specknet.airspeck.AIRSPECK_CONNECTED" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.specknet.airspeck.AIRSPECK_DISCONNECTED"/>
+                <action android:name="com.specknet.airspeck.AIRSPECK_DISCONNECTED" />
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.BATTERY_LOW"/>
-                <action android:name="android.intent.action.BATTERY_OKAY"/>
+                <action android:name="android.intent.action.BATTERY_LOW" />
+                <action android:name="android.intent.action.BATTERY_OKAY" />
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.ACTION_POWER_CONNECTED"/>
-                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED"/>
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.SettingsActivity"
             android:label="@string/title_activity_settings"
@@ -95,9 +95,8 @@
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.MainActivity"/>
+                android:value=".activities.MainActivity" />
         </activity>
-
         <activity
             android:name=".activities.SecurityKeySetupActivity"
             android:label="@string/title_activity_security_key"
@@ -105,9 +104,8 @@
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.MainActivity"/>
+                android:value=".activities.MainActivity" />
         </activity>
-
         <activity
             android:name=".activities.ConfigViewActivity"
             android:label="@string/config_view_title"
@@ -115,7 +113,7 @@
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.MainActivity"/>
+                android:value=".activities.MainActivity" />
         </activity>
 
         <service
@@ -123,43 +121,41 @@
             android:enabled="true"
             android:process=":bluetooth_speck_process">
             <intent-filter>
-                <action android:name="com.specknet.airrespeck.PHONE_LOCATION"/>
+                <action android:name="com.specknet.airrespeck.PHONE_LOCATION" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.specknet.respeck.RESPECK_LIVE_BROADCAST"/>
+                <action android:name="com.specknet.respeck.RESPECK_LIVE_BROADCAST" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.specknet.respeck.RESPECK_AVG_BROADCAST"/>
+                <action android:name="com.specknet.respeck.RESPECK_AVG_BROADCAST" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.specknet.respeck.RESPECK_AVG_STORED_BROADCAST"/>
+                <action android:name="com.specknet.respeck.RESPECK_AVG_STORED_BROADCAST" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.specknet.diarydaphne.DIARY_BROADCAST"/>
+                <action android:name="com.specknet.diarydaphne.DIARY_BROADCAST" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.specknet.rehabdiary.DIARY_BROADCAST"/>
+                <action android:name="com.specknet.rehabdiary.DIARY_BROADCAST" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.specknet.airspeck.AIRSPECK_LIVE_BROADCAST"/>
+                <action android:name="com.specknet.airspeck.AIRSPECK_LIVE_BROADCAST" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.specknet.respeck.ACTION_RESPECK_RECORDING_PAUSE"/>
+                <action android:name="com.specknet.respeck.ACTION_RESPECK_RECORDING_PAUSE" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.specknet.respeck.ACTION_RESPECK_RECORDING_CONTINUE"/>
+                <action android:name="com.specknet.respeck.ACTION_RESPECK_RECORDING_CONTINUE" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.specknet.uploadservice.REHAB_STATS_UPLOAD"/>
+                <action android:name="com.specknet.uploadservice.REHAB_STATS_UPLOAD" />
             </intent-filter>
         </service>
-
         <service
             android:name=".services.PhoneGPSService"
             android:enabled="true"
             android:exported="true"
-            android:process=":phone_gps_service">
-        </service>
+            android:process=":phone_gps_service"></service>
 
         <activity
             android:name=".activities.MapsAQActivity"
@@ -168,13 +164,13 @@
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.specknet.airrespeck.activities.MainActivity"/>
+                android:value="com.specknet.airrespeck.activities.MainActivity" />
 
             <intent-filter>
-                <action android:name="com.specknet.airspeck.AIRSPECK_LIVE_BROADCAST"/>
+                <action android:name="com.specknet.airspeck.AIRSPECK_LIVE_BROADCAST" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.specknet.airrespeck.PHONE_LOCATION"/>
+                <action android:name="com.specknet.airrespeck.PHONE_LOCATION" />
             </intent-filter>
         </activity>
 
@@ -185,9 +181,8 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
+                android:resource="@xml/provider_paths" />
         </provider>
-
     </application>
 
 </manifest>
