--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.SubjectActivity"></activity>
+        <activity android:name=".activities.SubjectActivity" />
         <activity android:name=".activities.BatteryViewActivity" />
 
         <meta-data
